# MicInput-VST

./: CMakeLists.txt  README.md  build.bat  index.html  setup_deps.bat
MicInput.vst3/Contents/Resources/: moduleinfo.json
src/audio/: DeviceProber.h  DirectMonitor.h  MicLog.h  ModelDownloader.h  PitchDetector.h  ThreadOptimizer.h  WasapiCapture.cpp  WasapiCapture.h  WavPlayer.h  WavRecorder.h  WhisperClient.h
src/gui/: Colours.h  LookAndFeel.cpp  LookAndFeel.h  NativeFileDrag.h  PluginEditor.cpp  PluginEditor.h
src/gui/components/: LevelMeter.h
src/plugin/: Parameters.h  PluginEditor.cpp  PluginProcessor.cpp  PluginProcessor.h
